--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <meta property="og:image" content="https://rjcnrd.github.io/KawaiiFighter/images/PreviewIcon.png">
+    <!-- <meta property="og:image" content="https://rjcnrd.github.io/KawaiiFighter/images/PreviewIcon.png"> -->
     <meta name="description" content="The new way of chatting - with gifs">
   
     <!--
